--- a/views/purchaseorder/purchaseorder.ejs
+++ b/views/purchaseorder/purchaseorder.ejs
@@ -232,7 +232,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="row mb-2">
-                        <% if (accesstype === "Owner" || accesstype === "Manager") { %>
+                        <% if (accesstype === "Owner" || accesstype === "Manager" || accesstype === "Procurement" || accesstype === "procurement") { %>
                         <button id="toggleButton" name="toggleButton"
                             class=" ml-3 btn btn-circle btn-outline-inventory ">
                             <i class="fas fa-chevron-right"></i>
