--- a/views/productionmaterials/productionmaterialsscripts.ejs
+++ b/views/productionmaterials/productionmaterialsscripts.ejs
@@ -346,7 +346,7 @@
                             categoryid = item.categorycode;
                         }
                     });
-                    // console.log("categoryid", categoryid)
+                    console.log("categoryid", categoryid)
                 },
                 error: function (err) {
                     warning('Warning', err);
