--- a/views/salesdetails/salesdetails.ejs
+++ b/views/salesdetails/salesdetails.ejs
@@ -26,6 +26,12 @@
                                 <div class="custom-dropdown cdw-tableoption" id="statusModalDropdown"></div>
                             </div>
                         </div>
+                        <div class="row justify-content-center mb-2">
+                            <div class="col-md-6">
+                                <label class="form-label">Reason</label>
+                                    <textarea autocomplete="off" id="reasonModal" name="reasonModal" type="text" class="form-control" placeholder="Enter Reason" value="" aria-label="fullname" aria-describedby="basic-addon1" rows="3"></textarea>
+                            </div>
+                        </div>
                         <div class="row mb-2 justify-content-center">
                             <div class="col-md-6">
                                 <label class="form-label" for="confirmModal">Confirmation</label>
