Inventory History Update
-inventory history can now filter with type and branch and search input
-UI update for product inventory

--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -506,6 +506,10 @@ td {
   height: 400px !important;
 }
 
+.inventory-table{
+  height: 680px !important;
+}
+
 .table-size {
   height: 625px !important;
 }
