--- a/views/inventoryhistory/inventoryhistory.ejs
+++ b/views/inventoryhistory/inventoryhistory.ejs
@@ -9,12 +9,12 @@
                 </div>
                 <div class="card-header py-3 header-bg">
                     <div class="row">
-                        <div class="col-md-4">
+                        <div class="col-xl-4">
                             <h6 class="mt-2 font-weight-bold table-title label-title h4">Inventory History</h6>
                         </div>
-                        <div class="col-md-8">
+                        <div class="col-xl-8">
                             <div class="row d-flex justify-content-end">
-                                <div class="col-9">
+                                <div class="col-xl-4">
                                     <div class="input-group">
                                         <input autocomplete="off" type="text" class="form-control bg-light small"
                                             placeholder="Search for..." aria-label="Search"
@@ -26,13 +26,35 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-3">
+                                <div class="col-xl-2 mb-1">
+                                    <div class="customdropdown">
+                                        <div class="select selecttype">
+                                            <span id="selectedtype">Filter by Type</span>
+                                            <i class="fa fa-chevron-left"></i>
+                                        </div>
+                                        <input autocomplete="off" type="hidden" name="typeid" id="typeid">
+                                        <ul class="customdropdown-menu typelist">
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="col-xl-2 mb-1">
+                                    <div class="customdropdown">
+                                        <div class="select selectbranch">
+                                            <span id="selectedbranch">Filter by Branch</span>
+                                            <i class="fa fa-chevron-left"></i>
+                                        </div>
+                                        <input type="hidden" name="branchfilter" id="branchfilter">
+                                        <ul class="customdropdown-menu branchlist">
+                                        </ul>
+                                    </div>
+                                </div>
+                                <!-- <div class="col-xl-1">
                                     <div class="row d-flex justify-content-center">
-                                        <button class="btn btn-outline-inventory ml-2" id="export-button">
+                                        <button class="btn btn-outline-inventory w-100" id="export-button">
                                             <i class="fas fa-download fa-sm"></i>
                                         </button>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
