--- a/views/productinventory/productinventoryscripts.ejs
+++ b/views/productinventory/productinventoryscripts.ejs
@@ -49,7 +49,7 @@
             } else {
                 data.forEach(item => {
                     let stocksClass = '';
-                    if (item.quantity > 15) {
+                    if (item.stocks > 15) {
                         stocksClass = 'custom-mobile-align text-left text-success';
                     } else {
                         stocksClass = 'custom-mobile-align text-left text-danger';
